crates/registry/tests/compile_fail/unsupported_prop_type.stderr
error: #[post_component] v1 supports props of type String, f64, i64, bool, or Option of one of these, plus `children: Children` (ADR-0005)
 --> tests/compile_fail/unsupported_prop_type.rs:5:18
  |
5 | pub fn Bad(data: Vec<String>) {
  |                  ^^^
